src/index.css
/* ... */
@plugin "daisyui/theme" {
  name: "gruvbox-material-light";
  default: false;
  prefersdark: false;
  color-scheme: light;
  --color-base-100: oklch(95.6% 0.055 96.2);
  --color-base-200: oklch(89.4% 0.057 89.3);
  --color-base-300: oklch(82.5% 0.051 85.1);
  --color-base-content: oklch(24.1% 0.005 219.8);
  --color-primary: oklch(72.1% 0.136 51.8);
  --color-primary-content: oklch(24.1% 0.005 219.8);
  --color-secondary: oklch(72.6% 0.085 141.1);
  --color-secondary-content: oklch(24.1% 0.005 219.8);
  --color-accent: oklch(75.6% 0.113 77);
  --color-accent-content: oklch(24.1% 0.005 219.8);
  --color-neutral: oklch(31.1% 0.003 48.4);
  --color-neutral-content: oklch(24.1% 0.005 219.8);
  --color-info: oklch(72.6% 0.085 141.1);
  --color-info-content: oklch(24.1% 0.005 219.8);
  --color-success: oklch(74.8% 0.107 116.5);
  --color-success-content: oklch(24.1% 0.005 219.8);
  --color-warning: oklch(75.6% 0.113 77);
  --color-warning-content: oklch(24.1% 0.005 219.8);
  --color-error: oklch(67.7% 0.161 25.4);
  --color-error-content: oklch(95.6% 0.055 96.2);
  --radius-selector: 0.5rem;
  --radius-field: 2rem;
  --radius-box: 0.5rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 2px;
  --depth: 1;
  --noise: 0;
}

@plugin "daisyui/theme" {
  name: "kanagawa";
  default: false;
  prefersdark: true;
  color-scheme: dark;
  --color-base-100: oklch(24.3% 0.017 285);
  --color-base-200: oklch(34% 0.028 284.8);
  --color-base-300: oklch(45.6% 0.041 284.7);
  --color-base-content: oklch(87.6% 0.039 99.1);
  --color-primary: oklch(83.3% 0.09 81.6);
  --color-primary-content: oklch(24.3% 0.017 285);
  --color-secondary: oklch(63.8% 0.087 301.7);
  --color-secondary-content: oklch(87.6% 0.039 99.1);
  --color-accent: oklch(69.4% 0.095 263.7);
  --color-accent-content: oklch(24.3% 0.017 285);
  --color-neutral: oklch(34% 0.028 284.8);
  --color-neutral-content: oklch(87.6% 0.039 99.1);
  --color-info: oklch(69.4% 0.095 263.7);
  --color-info-content: oklch(24.3% 0.017 285);
  --color-success: oklch(74.8% 0.112 128.4);
  --color-success-content: oklch(24.3% 0.017 285);
  --color-warning: oklch(83.3% 0.09 81.6);
  --color-warning-content: oklch(24.3% 0.017 285);
  --color-error: oklch(55.9% 0.167 23.1);
  --color-error-content: oklch(87.6% 0.039 99.1);
  --radius-selector: 0.5rem;
  --radius-field: 2rem;
  --radius-box: 0.5rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 2px;
  --depth: 1;
  --noise: 0;
}

@plugin "daisyui/theme" {
  name: "kanagawa-light";
  default: false;
  prefersdark: false;
  color-scheme: light;
  --color-base-100: oklch(93.6% 0.062 101.6);
  --color-base-200: oklch(90% 0.05 98);
  --color-base-300: oklch(86% 0.04 95);
  --color-base-content: oklch(24.3% 0.017 285);
  --color-primary: oklch(83.3% 0.09 81.6);
  --color-primary-content: oklch(24.3% 0.017 285);
  --color-secondary: oklch(63.8% 0.087 301.7);
  --color-secondary-content: oklch(93.6% 0.062 101.6);
  --color-accent: oklch(69.4% 0.095 263.7);
  --color-accent-content: oklch(24.3% 0.017 285);
  --color-neutral: oklch(45.6% 0.041 284.7);
  --color-neutral-content: oklch(93.6% 0.062 101.6);
  --color-info: oklch(69.4% 0.095 263.7);
  --color-info-content: oklch(24.3% 0.017 285);
  --color-success: oklch(74.8% 0.112 128.4);
  --color-success-content: oklch(24.3% 0.017 285);
  --color-warning: oklch(83.3% 0.09 81.6);
  --color-warning-content: oklch(24.3% 0.017 285);
  --color-error: oklch(55.9% 0.167 23.1);
  --color-error-content: oklch(93.6% 0.062 101.6);
  --radius-selector: 0.5rem;
  --radius-field: 2rem;
  --radius-box: 0.5rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 2px;
  --depth: 1;
  --noise: 0;
}

@plugin "daisyui/theme" {
  name: "dracula-light";
  default: false;
  prefersdark: false;
  color-scheme: light;
  --color-base-100: oklch(97% 0.005 277.5);
  --color-base-200: oklch(93% 0.01 277.5);
  --color-base-300: oklch(89% 0.012 277.5);
  --color-base-content: oklch(28.8% 0.022 277.5);
  --color-primary: oklch(75.5% 0.183 346.8);
  --color-primary-content: oklch(97% 0.005 277.5);
  --color-secondary: oklch(74.2% 0.149 301.9);
  --color-secondary-content: oklch(97% 0.005 277.5);
  --color-accent: oklch(88.3% 0.093 212.9);
  --color-accent-content: oklch(28.8% 0.022 277.5);
  --color-neutral: oklch(40.3% 0.032 277.8);
  --color-neutral-content: oklch(97% 0.005 277.5);
  --color-info: oklch(88.3% 0.093 212.9);
  --color-info-content: oklch(28.8% 0.022 277.5);
  --color-success: oklch(87.1% 0.219 148);
  --color-success-content: oklch(28.8% 0.022 277.5);
  --color-warning: oklch(83.4% 0.124 66.6);
  --color-warning-content: oklch(28.8% 0.022 277.5);
  --color-error: oklch(68.2% 0.206 24.4);
  --color-error-content: oklch(97% 0.005 277.5);
  --radius-selector: 0.5rem;
  --radius-field: 2rem;
  --radius-box: 0.5rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 2px;
  --depth: 1;
  --noise: 0;
}
/* ... */

